# Xsync

./: README.md  pyproject.toml  xsync.spec  xync.spec
.claude/: settings.local.json
.github/: Dockerfile.arm64
.github/workflows/: build-release.yml  pypi.yml
scripts/: test-executable.sh
src/xsync/: __init__.py  api.py  config.py  daemon.py  discord.py  main.py  models.py  sync.py  telegram.py  utils.py
src/xync/: __init__.py  api.py  config.py  daemon.py  discord.py  main.py  models.py  sync.py  telegram.py  utils.py
tests/: test_cli.py  test_config.py  test_discord.py  test_models.py  test_sync.py  test_telegram.py
