[project]
name = "xsync"
version = "1.1.0"
description = "Linux mirror synchronization and management CLI tool"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.15.2",
    "rich>=13.9.4",
    "tomli-w>=1.2.0",
    "tomllib; python_version < '3.11'",
    "pydantic>=2.11.1",
    "httpx>=0.28.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "croniter>=6.0.0",
]

[project.scripts]
xsync = "xsync.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xsync"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
